# sil-kit-transport

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci-build-and-test.yaml
src/: CMakeLists.txt  asiogenericbytestream.cpp  asiogenericbytestream.hpp  asiogenericunbufferedbytestream-test.cpp  asiogenericunbufferedbytestream.cpp  asiogenericunbufferedbytestream.hpp  bufferedbytestream-test.cpp  bufferedbytestream.cpp  bufferedbytestream.hpp  buffersequence.hpp  byteorder.cpp  exceptions.cpp  exceptions.hpp  ibufferedbytestream.cpp  ibufferedbytestream.hpp  ibytestream.cpp  ibytestream.hpp  ibytestream2.hpp  imessagestream.cpp  imessagestream.hpp  iunbufferedbytestream.hpp  log.cpp  log.hpp  messagestream.cpp  messagestream.hpp  silkittransport.cpp  silkittransport.hpp
src/acceptors/: asiotcpacceptor.cpp  asiotcpacceptor.hpp  asiotcpunbufferedbytestreamacceptor.cpp  asiotcpunbufferedbytestreamacceptor.hpp
src/connectors/: asiotcpconnector.cpp  asiotcpconnector.hpp
src/contexts/: asioiocontext.cpp  asioiocontext.hpp
src/interfaces/: iacceptor.cpp  iacceptor.hpp  ibufferedbytestream.hpp  iconnector.cpp  iconnector.hpp  iiocontext.cpp  iiocontext.hpp  imessagestream.hpp  iunbufferedbytestream.cpp  iunbufferedbytestream.hpp  iunbufferedbytestreamacceptor.cpp  iunbufferedbytestreamacceptor.hpp
src/streams/: asiogenericunbufferedbytestream-test.cpp  asiogenericunbufferedbytestream.cpp  asiogenericunbufferedbytestream.hpp  bufferedbytestream-test.cpp  bufferedbytestream.cpp  bufferedbytestream.hpp  messagestream.cpp  messagestream.hpp  traceunbufferedbytestream.cpp  traceunbufferedbytestream.hpp
src/utilities/: buffersequence.cpp  byteorder.cpp  byteorder.hpp  exceptions.cpp  exceptions.hpp
